web_studio/static/src/less/form_editor.less
.o_web_studio_client_action {
    .o_web_studio_view_editor .o_web_studio_view_renderer .o_form_view {
        &:not(.o_form_nosheet) {
            padding: 0;
        }
        .o_form_sheet_bg {
            padding: 16px;
        }
        .o_form_sheet, .oe_chatter {
            max-width: 100%;
        }
        .oe_chatter {
            position: relative;
            .o_web_studio_overlay {
                .o-position-absolute(0, 0, 0, 0);
            }
        }

        &.o_web_studio_form_view_editor {
            .o_web_studio_hook {
                :first-child {
                    line-height: 0px;
                }
                > td {
                    padding: 0;
                }
                span.o_web_studio_hook_separator {
                    display: block;
                    position: relative;
                    border: 0px dashed transparent;
                    .o-transition(all, 0.2s, 0s, cubic-bezier(0.215, 0.610, 0.355, 1.000));
                }
            }
            .o_web_studio_hook.o_web_studio_nearest_hook {
                cursor: pointer !important;
                outline: none;
                span.o_web_studio_hook_separator {
                    background-color: fade(@odoo-brand-optional, 2%);
                    border: 1px dashed fade(@odoo-brand-optional, 50%);
                    padding: 20px;
                    margin: 4px 0;
                }
            }
            .o_inner_group {
                border-collapse: separate;
                border: 10px solid transparent;
                transition: border-color 0.5s;

                tr:not(.o_web_studio_new_line) {
                    td {
                        border: 5px solid transparent;
                        border-bottom-width: 1px;

                        &.o_td_label {
                            min-width: 140px;
                        }
                    }

                    &.o_clicked {
                        outline: 2px solid @odoo-brand-optional;
                    }
                }

                &.o_clicked{
                    padding: 5px;
                    outline: 2px solid @odoo-brand-optional;
                    border: 5px solid fade(@odoo-brand-optional, 10%);

                    tr:not(.o_web_studio_hovered) td > *:not(.o_horizontal_separator) {
                        opacity: 0.5;
                    }
                }
            }
        }
        .o_form_field_image img {
            width: 100%;
            height: auto;
            &[src="/web/static/src/img/placeholder.png"] {
                padding: 9% 24%;
                background: @o-web-studio-bg-lighter;
            }
        }
        .o_web_studio_hovered {
            outline: 1px dashed @odoo-brand-optional;
            cursor: pointer;
        }
        .o_clicked {
            outline: 2px solid @odoo-brand-optional;
        }
        .o_web_studio_button_hook {
            width: 48px;
            cursor: pointer;
            text-align: center;
            padding: 0;
            border-left: none;
        }

        .oe_button_box:hover .o_web_studio_button_hook:before {
            content: "\f0fe";
            font-family: FontAwesome;
            font-size: 16px;
            color: @odoo-brand-optional;
        }
        .o_web_studio_buttonbox_hook {
            .o-flex-display();
            .o-justify-content(center);
            .o-align-items(center);
            height: 48px;
            cursor: pointer;
            color: @odoo-brand-optional;
            font-weight: bold;
            opacity: 0.6;
            &:hover {
                opacity: 1;
            }
        }
        .o_web_studio_add_chatter {
            .o-flex-display();
            .o-justify-content(center);
            .o-align-items(center);
            .container;
            .user-select(none);
            margin-top: 10px;
            height: 60px;
            max-width: 100%;
            cursor: pointer;
            background-color: lightgray;
            color: @odoo-brand-optional;
            font-weight: bold;
            opacity: 0.6;
            &:hover {
                opacity: 1;
            }
        }
    }
}

table.o_web_studio_new_elements {
    border-collapse: separate;
    border-spacing: 20px;

    td.o_web_studio_new_element {
        &[disabled] {
          opacity: 0.5;
          cursor: auto;
        }
        cursor: pointer;
        border: 1px solid #ddd;
        text-align: center;

        > i {
            font-size: 35px;
        }
    }
}

.o_web_studio_new_button_dialog {
    > div {
        margin-top: 16px;
    }
    .o_web_studio_icon_selector {
        display: inline-block;
        padding: 3px;
        font-size: medium;

        &.o_selected {
            outline: 1px solid @odoo-brand-optional;
        }
    }
}

